# MLRvst

./: .gitignore  BAKED_CROSSFADE_V172.md  BUILD_FIX_V164.sh  BUILD_HELP.md  BUILD_INSTRUCTIONS.md  CLION_BUILD_GUIDE.md  CMakeLists.txt  COMPACT_GLOBAL_CONTROLS_V187.md  CRASH_FIX_V164.md  CROSSFADE_ACTUAL_FIX_V176.md  FIXES_V170.md  INNER_LOOP_CLEAR_V183.md  INNER_LOOP_PREROLL_V182.md  INPUT_METERS_V169.md  LICENSE  LOOP_CROSSFADE_V171.md  Makefile  NOTICE  PRESET_SYSTEM_V188.md  QUICKSTART.md  README.md  README_BUILD.md  RECORDING_BUFFER_PLAN.md  SPACEBAR_TRANSPORT_V184.md  STABLE_CHECKPOINT.md  THIRD_PARTY_NOTICES.md  UI_REDESIGN_GUIDE.md  UPSTREAM_PROVENANCE.md  ZDF_FILTER_PLAN.md  build_macos.sh  check-build-env.sh  check_bundles.sh  clean_all.sh
Docs/: AUDIO_ENGINE_DOCS.md  AUDIO_MODERNIZATION_COMPARISON.md  BUILD.md  CLION_SETUP.md  MODERNIZATION_GUIDE.md  README.md  SCENE_SEQUENCER_V2_SPEC.md  SERIALOSC_REFERENCE.md  SUMMARY.md  USER_MANUAL.md
Docs/archive/: README.md
Docs/archive/build-guides/: CLION_BUILD_GUIDE.md  CLION_SETUP.md  REBUILD_INSTRUCTIONS.md
Docs/archive/notes/: CLICK_FREE_V173.md  INNER_LOOP_CROSSFADE_V181.md  INPUT_MONITORING_V167.md  INPUT_MONITORING_V168_VERIFICATION.md  PERFECT_CLOCK_SYNC_V166.md  PREROLL_CROSSFADE_V177.md  QUICK_FIX_V164.md  REVERSE_INNER_LOOP_V185.md  TABBED_TOP_CONTROLS_V186.md  TRANSPORT_SYNC_V165.md  UI_REDESIGN_V180_GUIDE.md
Source/: ArcController.cpp  AudioEngine.cpp  AudioEngine.h  MonomeController.cpp  MonomeFileBrowserActions.cpp  MonomeFileBrowserActions.h  MonomeFilterActions.cpp  MonomeFilterActions.h  MonomeGroupAssignActions.cpp  MonomeGroupAssignActions.h  MonomeMixActions.cpp  MonomeMixActions.h  PerformanceTargets.h  PluginEditor.cpp  PluginEditor.h  PluginEntry.cpp  PluginProcessor.cpp  PluginProcessor.h  PresetStore.cpp  PresetStore.h  SampleMode.cpp  SampleMode.h  StepSampler.h  StepSequencerDisplay.h  TimeStretchBackend.cpp  TimeStretchBackend.h  WarpGrid.cpp  WarpGrid.h
cmake/: GenerateBuildInfo.cmake
release/mlrVST.component/Contents/: Info.plist
scripts/: bootstrap_native_deps.sh  install_macos_plugins.sh  package_release_macos.sh  package_release_windows.ps1
